# wahlen

./: __init__.py  pyproject.toml  wahltrends.ipynb
src/python/utils/: __init__.py  queries.py
src/sql/: test.sql
